src-tauri/tests/snapshots/pipeline_streams__stream_replay@codex__pi-reasoning-ordering.jsonl.snap
---
source: tests/pipeline_streams.rs
assertion_line: 367
expression: snapshot
input_file: tests/fixtures/streams/codex/pi-reasoning-ordering.jsonl
---
line_count: 11
checkpoint_count: 4
checkpoints:
  - line_index: 5
    event_type: item/completed
    roles:
      - assistant
    last_part_types:
      - reasoning
      - tool-call
  - line_index: 6
    event_type: item/completed
    roles:
      - assistant
    last_part_types:
      - reasoning
      - tool-call
  - line_index: 9
    event_type: item/completed
    roles:
      - assistant
    last_part_types:
      - reasoning
      - tool-call
      - text
  - line_index: 10
    event_type: turn/completed
    roles:
      - assistant
      - system
    last_part_types:
      - text
final_state:
  message_count: 2
  roles:
    - assistant
    - system
  total_parts: 4
persisted_turns:
  turn_count: 3
  total_blocks: 0
  turns:
    - role: assistant
      block_types: []
    - role: assistant
      block_types: []
    - role: assistant
      block_types: []
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - reasoning
        - tool-call
        - text
